# rustbox

./: .gitignore  Cargo.toml  README.md  upstream-lock.json
.github/workflows/: ci.yml
apps/mesoanalysis/: Cargo.toml
apps/mesoanalysis/src/: main.rs
apps/open-wx-api-rs/: Cargo.toml
apps/open-wx-api-rs/src/: main.rs
apps/radar-viewer/: Cargo.toml
apps/radar-viewer/src/: main.rs
crates/wx-cli/: Cargo.toml
crates/wx-cli/src/: main.rs
crates/wx-cuda/: Cargo.toml
crates/wx-cuda/src/: lib.rs
crates/wx-fetch/: Cargo.toml
crates/wx-fetch/src/: cache.rs  client.rs  lib.rs  sources.rs
crates/wx-geo/: Cargo.toml
crates/wx-geo/src/: lib.rs
crates/wx-grib/: Cargo.toml
crates/wx-grib/src/: lib.rs
crates/wx-grid/: Cargo.toml
crates/wx-grid/src/: lib.rs
crates/wx-py/: Cargo.toml
crates/wx-py/src/: lib.rs
crates/wx-radar/: Cargo.toml
crates/wx-radar/src/: lib.rs
crates/wx-radar/src/nexrad/: color_table.rs  derived.rs  detection.rs  level2.rs  mod.rs  products.rs  render.rs
crates/wx-render/: Cargo.toml
crates/wx-render/src/: colormap.rs  colormaps.rs  lib.rs  map_render.rs  style.rs  text.rs
crates/wx-severe/: Cargo.toml
crates/wx-severe/src/: lib.rs
crates/wx-thermo/: Cargo.toml
crates/wx-thermo/src/: lib.rs
crates/wx-types/: Cargo.toml
crates/wx-types/src/: lib.rs
crates/wx-wrf/: Cargo.toml
crates/wx-wrf/src/: lib.rs
crates/wx-zarr/: Cargo.toml
crates/wx-zarr/src/: lib.rs
docs/: architecture.md  migration-map.md  migration-notes.md  showcase.md
python/: README.md
python/compat-cfgrib/: README.md
python/compat-eccodes/: README.md
python/compat-herbie/: README.md
python/compat-wrf/: README.md
python/metrust/: __init__.py
scripts/: bootstrap-upstreams.ps1  regenerate-showcase.ps1
tests/fixtures/: KATX20240101_000258_partial_V06  hrrr_demo_model_column.json  hrrr_demo_pressure_fragment.idx  hrrr_demo_surface_fragment.idx  hrrr_gust_surface_fragment.grib2  hrrr_gust_surface_fragment.idx  sounding_supercell.json
