[workspace]
members = [
    "crates/wx-types",
    "crates/wx-geo",
    "crates/wx-fetch",
    "crates/wx-grib",
    "crates/wx-thermo",
    "crates/wx-grid",
    "crates/wx-severe",
    "crates/wx-radar",
    "crates/wx-render",
    "crates/wx-zarr",
    "crates/wx-wrf",
    "crates/wx-cuda",
    "crates/wx-py",
    "crates/wx-cli",
    "apps/mesoanalysis",
    "apps/radar-viewer",
    "apps/open-wx-api-rs",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Fahrenheit Research"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
font8x8 = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusttype = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shapefile = "0.7"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
grib-core = { git = "https://github.com/FahrenheitResearch/cfrust.git", rev = "d326eca4615df9cb3b081181e5e56a9026bb7c3f", package = "grib-core", default-features = false }
sharprs = { git = "https://github.com/FahrenheitResearch/sharprs.git", rev = "16cf0757304eb690d0208c304e32a4676178f00a" }
