[package]
name = "wx-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
wx-fetch = { path = "../wx-fetch" }
wx-grib = { path = "../wx-grib" }
wx-render = { path = "../wx-render" }
wx-severe = { path = "../wx-severe" }
wx-thermo = { path = "../wx-thermo" }
wx-types = { path = "../wx-types" }
