[package]
name = "wx-grib"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
grib-core.workspace = true
wx-fetch = { path = "../wx-fetch" }
wx-types = { path = "../wx-types" }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
wx-thermo = { path = "../wx-thermo" }
wx-severe = { path = "../wx-severe" }
