[package]
name = "wx-radar"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
byteorder = "1.5"
bzip2 = { version = "0.5", default-features = false, features = ["libbz2-rs-sys"] }
flate2 = "1.1"
