[package]
name = "wx-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
image.workspace = true
wx-types = { path = "../wx-types" }

[dev-dependencies]
chrono.workspace = true
tempfile = "3"
wx-fetch = { path = "../wx-fetch" }
wx-grib = { path = "../wx-grib" }
