[package]
name = "wx-severe"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
sharprs.workspace = true
wx-thermo = { path = "../wx-thermo" }
wx-types = { path = "../wx-types" }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
